--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+:root {
+  --lightBlue: #9ddfd3;
+  --mainBlue: #31326f;
+  --mainDark: #232528;
+  --mainWhite: #f3f3f3;
+  --mainYellow: #eebb37;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: var(--mainWhite) !important;
+  color: var(--mainDark);
+  font-family: 'Roboto', sans-serif !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.img-company {
+  height: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text-blue {
+  color: var(--mainBlue);
 }
 
-.App-link {
-  color: #61dafb;
+.text-bright {
+  color: var(--lightBlue);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-title {
+  letter-spacing: 0.3rem;
+  text-transform: capitalize;
+}
+
+.text-yellow {
+  color: var(--mainYellow);
 }
